[package]
name = "imageoptim-cli"
version = "4.0.0-alpha.0"
authors = ["Jamie Mason <jamie@foldleft.io>"]
edition = "2024"
homepage = "https://github.com/JamieMason/ImageOptim-CLI"
repository = "https://github.com/JamieMason/ImageOptim-CLI"
description = "Automates ImageOptim, ImageAlpha, and JPEGmini for Mac to make batch optimisation of images part of your automated build process."
license = "MIT"
keywords = [
  "imageoptim",
  "imagealpha",
  "jpegmini",
  "image-compression",
  "macos",
]
readme = "./README.md"
include = ["src/**/*.rs", "src/**/*.applescript"]

[[bin]]
name = "imageoptim"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
ctrlc = { version = "3.5.2", features = ["termination"] }
globset = "0.4.18"
ignore = "0.4.27"
libc = "0.2.186"
serde_json = "1.0.150"
thiserror = "2.0.18"
uuid = { version = "1.23.4", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile = "3.27.0"

[profile.release]
codegen-units = 1 # Reduce number of codegen units to increase optimisations
debug = false     # Remove debug information
lto = true        # Enable Link Time Optimisation
opt-level = 3     # Optimise for speed: the binary is tiny either way
panic = "abort"   # Abort on panic rather than unwinding
strip = true      # Strip symbols from binary
